<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <TextView
            android:id="@+id/textViewNumberOfInsult"
            style="@style/tv_with_blue_text"
            android:layout_marginStart="15dp"
            android:text="@string/activity_main_insult_number"
            app:layout_constraintBottom_toBottomOf="@id/guidelineTop"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewEngLan"
            style="@style/tv_with_blue_text"
            android:layout_marginTop="20dp"
            android:text="@string/activity_main_english_lang"
            app:layout_constraintEnd_toStartOf="@id/switchLang"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewRussLan"
            style="@style/tv_with_blue_text"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/activity_main_russian_lang"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switchLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textViewRussLan"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/textViewInsult"
            style="@style/tv_with_blue_text"
            android:layout_margin="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_tv"
            android:padding="8dp"
            android:text="@string/activity_main_text_will_be_here"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guidelineTop" />

        <TextView
            android:id="@+id/textViewPressTheButton"
            style="@style/tv_with_blue_text"
            android:text="@string/activity_main_press_to_the_blue_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInsult" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            style="@style/main_screen_guidLine"
            app:layout_constraintGuide_percent="0.17" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        style="@style/main_screen_guidLine"
        app:layout_constraintGuide_percent="0.6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGetInsult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/activity_main_button_press_it"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottom"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceAppSmallComponent" />

    <TextView
        android:id="@+id/textViewShow"
        style="@style/view_with_white_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_for_buttons"
        android:padding="5dp"
        android:text="@string/activity_main_how_many_people_saw_it"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGetInsult" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/activity_main_fab"
        android:focusable="true"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineBottom"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>